deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arbesk
  labels: { app: arbesk }
spec:
  selector: { app: arbesk }
  ports:
    - port: 80
      targetPort: 9090
